--- a/assets/main.css
+++ b/assets/main.css
@@ -3,9 +3,10 @@
 @tailwind components;
 @tailwind utilities;
 
-#app {
+.app {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   font-weight: normal;
+  min-height: 100vh;
 }
